unordered list of cities lived in

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
         </title>
     </head>
     <body>
-        
+        <ul>
+            <li>Sewell</li>
+            <li>Ramstein</li>
+            <li>Tokyo</li>
+            <li>Colorado Springs</li>
+        </ul>
     </body>
 </html>
