ordered list of cities to visit

--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
             <li>Tokyo</li>
             <li>Colorado Springs</li>
         </ul>
+        <ol>
+            <li>London</li>
+            <li>Athens</li>
+            <li>Sapporo</li>
+        </ol>
     </body>
 </html>
