--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
         </title>
     </head>
     <body>
+        <h1>List of Locations Previously Lived in</h1>
         <ul>
             <li>Sewell</li>
             <li>Ramstein</li>
             <li>Tokyo</li>
             <li>Colorado Springs</li>
         </ul>
+        <h1>List of Top Three Cities to Visit</h1>
         <ol>
             <li>London</li>
             <li>Athens</li>
