added descriptions to headings

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>List of Locations Previously Lived in</h1>
+        <p>
+            Grew up in Sewell and moved to the other locations for military PCS.
+        </p>
         <ul>
             <li>Sewell</li>
             <li>Ramstein</li>
@@ -14,6 +17,9 @@
             <li>Colorado Springs</li>
         </ul>
         <h1>List of Top Three Cities to Visit</h1>
+        <p>
+            Would like to visit these cities to see the local culture and architecture.
+        </p>
         <ol>
             <li>London</li>
             <li>Athens</li>
