added summary for location on list

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
             Grew up in Sewell and moved to the other locations for military PCS.
         </p>
         <ul>
-            <li>Sewell</li>
-            <li>Ramstein</li>
-            <li>Tokyo</li>
-            <li>Colorado Springs</li>
+            <li>Sewell <span>(Lived here for High School)</span></li>
+            <li>Ramstein <span>(First assignment in military)</span></li>
+            <li>Tokyo <span>(Second assignment)</span></li>
+            <li>Colorado Springs <span>(Current assignment)</span></li>
         </ul>
         <h1>List of Top Three Cities to Visit</h1>
         <p>
