added strong and emphasis to second list

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             Would like to visit these cities to see the local culture and architecture.
         </p>
         <ol>
-            <li>London</li>
-            <li>Athens</li>
-            <li>Sapporo</li>
+            <li><strong>London</strong></li>
+            <li><em>Athens</em></li>
+            <li><strong>Sapporo</strong></li>
         </ol>
     </body>
 </html>
