added img with height and width

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
             <li><em>Athens</em></li>
             <li><strong>Sapporo</strong></li>
         </ol>
+        <img
+            class="fit-picture"
+            src="https://interactive-examples.mdn.mozilla.net/media/cc0-images/grapefruit-slice-332-332.jpg"
+            alt="Grapefruit slice atop a pile of other slices"
+            width="200"
+            height="200"/>
     </body>
 </html>
