fixed Markup Validation Issues

--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
             alt="Grapefruit slice atop a pile of other slices"
             width="200"
             height="200"/>
+        <br>
+        <a href="favorites.html">Favorites</a>
     </body>
 </html>
